Changes to test to a relative path on the local file system

--- a/html/g1.html
+++ b/html/g1.html
@@ -2,7 +2,7 @@
 <head>
 <style type="text/css">
 body {
-  background-image: url("images/device.png");
+  background-image: url("g1.png");
   background-position: 0px 0px;
   background-repeat: no-repeat;
   padding: 0px;
@@ -24,7 +24,7 @@ iframe {
 
 <div id="emulator">
 
-<iframe src ="assets/www/index.html" height="480" width="320" </iframe>
+<iframe src ="../../DailyPaper/android/assets/www/index.html" height="480" width="320" </iframe>
 
 </div>  
   
