--- a/html/xperia.html
+++ b/html/xperia.html
@@ -2,7 +2,7 @@
 <head>
 <style type="text/css">
 body {
-  background-image: url("images/xperia.png");
+  background-image: url("xperia.png");
   background-position: 0px 0px;
   background-repeat: no-repeat;
   padding: 0px;
@@ -25,7 +25,7 @@ iframe {
 
 <div id="emulator" >
 
-<iframe src ="assets/www/index.html" height="854" width="480" </iframe>
+<iframe src ="../../DailyPaper/android/assets/www/index.html" height="854" width="480" </iframe>
 
 </div>  
 
